--- a/public/css/style.css
+++ b/public/css/style.css
@@ -161,10 +161,49 @@ nav {
 
 }
 
+.match-hr {
+    height: 5px;
+    background-color: var(--color-main-teal);
+}
+
+
 .match {
     /* display: block; */
     position: relative;
+}
+
+.bg1 {
     background: url(/images/bgs/1-ts.png)
+}
+.bg2 {
+    background: url(/images/bgs/2-ts.png)
+}
+.bg3 {
+    background: url(/images/bgs/3-ts.png)
+}
+.bg4 {
+    background: url(/images/bgs/4-ts.png)
+}
+.bg5 {
+    background: url(/images/bgs/5-ts.png)
+}
+.bg6 {
+    background: url(/images/bgs/6-ts.png)
+}
+.bg7 {
+    background: url(/images/bgs/7-ts.png)
+}
+.bg8 {
+    background: url(/images/bgs/8-ts.png)
+}
+.bg9 {
+    background: url(/images/bgs/9-ts.png)
+}
+.bg10 {
+    background: url(/images/bgs/10-ts.png)
+}
+.bg11 {
+    background: url(/images/bgs/11-ts.png)
 }
 
 
