--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <nav>
         <h1 class='logo'>LOR-CHIEF</h1>
         <ul class='nav-list'>
-            <li class='nav-item'>Home</li>
+            <li class='nav-item'><a href="#">Home</a></li>
             <li class='nav-item'>Match-history</li>
             <li class='nav-item'>About-us</li>
         </ul>
